force-app/main/default/objects/Amostra__c/Amostra__c.object-meta.xml
<CustomObject>
    <description>Registro formal do processo de envio e teste de amostra (Caminho B - Produto Novo) — rastreamento técnico entre vendedor e químico. Lookup em Opportunity e Product2, não Master-Detail (ver BRD 3.5.2 / architecture.md). Ver demanda-09.</description>
    <label>Amostra</label>
    <nameField>
        <displayFormat>AM-{0000}</displayFormat>
        <label>Número da Amostra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amostras</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>