force-app/main/default/objects/Amostra__c/fields/CustoEstimado__c.field-meta.xml
<CustomField>
    <fullName>CustoEstimado__c</fullName>
    <description>Custo estimado desta amostra (produção + envio) — visibilidade de custo por amostra, hoje inexistente segundo o cliente (ver business-scenario.md). Ver demanda-09.</description>
    <label>Custo Estimado</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>