force-app/main/default/objects/Amostra__c/fields/DataEnvio__c.field-meta.xml
<CustomField>
    <fullName>DataEnvio__c</fullName>
    <description>Data de envio da amostra para o cliente — base para o alerta de cobrança de retorno em 10 dias (ver Flow Amostra_Cobranca_Retorno e business-scenario.md). Ver demanda-09.</description>
    <label>Data de Envio</label>
    <type>Date</type>
</CustomField>