force-app/main/default/objects/Amostra__c/fields/NumeroTentativa__c.field-meta.xml
<CustomField>
    <fullName>NumeroTentativa__c</fullName>
    <description>Número sequencial da tentativa de amostra dentro da mesma Oportunidade (1ª, 2ª, 3ª...). Implementado como Number, não AutoNumber declarativo — AutoNumber do Salesforce incrementa globalmente no objeto, não por Oportunidade, então não atende &quot;número da tentativa&quot; por cliente/oportunidade sem lógica adicional (Flow/Apex, fora do escopo desta demanda). Preenchido pelo processo de negócio (vendedor/químico) ou por automação futura. Ver demanda-09.</description>
    <label>Número da Tentativa</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>