force-app/main/default/objects/Amostra__c/fields/Oportunidade__c.field-meta.xml
<CustomField>
    <fullName>Oportunidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Oportunidade à qual esta amostra está vinculada — Lookup (não Master-Detail), conforme ADR/BRD 3.5.2, para permitir OWD próprio em Amostra__c. Ver demanda-09.</description>
    <label>Oportunidade</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Amostras</relationshipLabel>
    <relationshipName>Amostras</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>