force-app/main/default/objects/Amostra__c/fields/PesoVolumeEnviado__c.field-meta.xml
<CustomField>
    <fullName>PesoVolumeEnviado__c</fullName>
    <description>Peso ou volume da amostra enviada, incluindo unidade (ex.: &quot;500g&quot;, &quot;2L&quot;) — texto livre para acomodar diferentes unidades entre linhas de produto. Ver demanda-09.</description>
    <label>Peso/Volume Enviado</label>
    <length>40</length>
    <type>Text</type>
</CustomField>