force-app/main/default/objects/Amostra__c/fields/ProdutoAmostrado__c.field-meta.xml
<CustomField>
    <fullName>ProdutoAmostrado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Produto (Product2) enviado para teste — Lookup para reutilizar o catálogo já cadastrado (demanda-07). Ver demanda-09.</description>
    <label>Produto Amostrado</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Amostras</relationshipLabel>
    <relationshipName>Amostras</relationshipName>
    <type>Lookup</type>
</CustomField>