force-app/main/default/objects/Amostra__c/fields/Resultado__c.field-meta.xml
<CustomField>
    <fullName>Resultado__c</fullName>
    <description>Resultado do teste da amostra. &quot;Reprovado&quot; dispara o Flow que cria um Case (RecordType &quot;Envio e Teste de Amostra&quot;) roteado à Queue Laboratório — ver Flow Amostra_Reprovada_Cria_Case. Ver demanda-09.</description>
    <label>Resultado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Em Teste</fullName>
                <default>true</default>
                <label>Em Teste</label>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Reprovado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>